--- a/protoypes/src/main/resources/static/resources/css/style.css
+++ b/protoypes/src/main/resources/static/resources/css/style.css
@@ -34,3 +34,13 @@ header {
     display: inline-block;
     align-content: center;
 }
+
+a.button {
+	-webkit-appearance: button;
+	-moz-appearance: button;
+	appearance: button;
+
+	text-decoration: none;
+	color: initial;
+	width: 100%;
+}
