--- a/protoypes/src/main/resources/templates/book.html
+++ b/protoypes/src/main/resources/templates/book.html
@@ -8,7 +8,7 @@
 <body>
     <h1 th:text="${eventName}"></h1>
     <table style="width: 100%">
-        <tr th:each="start : ${appointments.keySet()}">
+        <tr th:each="start : ${appointments}">
 
         </tr>
     </table>
