nothing really, just want to work on my PC, not laptop

--- a/protoypes/src/main/resources/templates/book.html
+++ b/protoypes/src/main/resources/templates/book.html
@@ -7,10 +7,8 @@
 </head>
 <body>
     <h1 th:text="${eventName}"></h1>
-    <table style="width: 100%">
-        <tr th:each="start : ${appointments}">
-
-        </tr>
+    <table style="width:100% ">
+        <tr th:each="appointment : ${appointments}" th:value="${appointment.toString()}"></tr>
     </table>
 </body>
 </html>
